@@ -1,33 +1,38 @@
 package net.contal.spring.datahandler;
 import java.util.ArrayList;
-import java.util.HashMap;
-
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
 import net.contal.spring.model.*;
 
 
-/*
+/**
  * 
- * */
-public class SumCustomHandler {
+ * @author A.H.Safaie 
+ *
+ */
+public abstract class SumCustomHandler {
 
+	    private SumCustomHandler() {
+		   throw new IllegalStateException("Utility class");
+		  }
 	
 	/*
 	 * Coagulate total for the map 
 	 * */
-	public static Float getTotal(HashMap<String,ArrayList<CustomItem>> map ){
-		
-	
+	public static Float getTotal(Map<String,List<CustomItem>> map ){
 		Float total=0.0f;
 		//Map iterator values 
-		for (ArrayList<CustomItem> items : map.values()) {
+		for (List<CustomItem> items : map.values()) {
 			//total all 
 			for (CustomItem customItem : items) {	
+				if(customItem.getTotalAmount()!=null) {
+	                    total+=customItem.getTotalAmount();	
+	                 }		
+			      }
+		       }
 		
-				if(customItem.getTotalAmount()!=null)
-	                 total+=customItem.getTotalAmount();			
-			}
-			
-		}
 		return total;
 		
 	}
@@ -35,16 +40,15 @@ public class SumCustomHandler {
 	 * GetTotal by ArrayList 
 	 * 
 	 * */
-	public static Double getTotal(ArrayList<CustomItem> list ){
-		
-		
+	public static Double getTotal(List<CustomItem> list ){
 		Double total=new Double(0);
 		//Map iterator values 
 		for (CustomItem item :list) {
 			//total all 
 				if(item.getTotalAmount()!=null){
-					if(item.getStatus().contains("APPROVED"))
-	                 total+=item.getTotalAmount();	
+					if(item.getStatus().contains("APPROVED")) {
+	                     total+=item.getTotalAmount();	
+	                    }
 	                 }		
 		}
 		return total;
@@ -58,11 +62,10 @@ public class SumCustomHandler {
 	 * Convert mapped items to ArrayList 
 	 */
 	
-	public static ArrayList<CustomItem>  mapToList(HashMap<String,ArrayList<CustomItem>> map ){
-		
-		ArrayList<CustomItem> itemsAll=new ArrayList<>();
+	public static List<CustomItem>  mapToList(Map<String,List<CustomItem>> map ){
+		List<CustomItem> itemsAll=new ArrayList<>();
 		//Map iterator values 
-		for (ArrayList<CustomItem> items : map.values()) {
+		for (List<CustomItem> items : map.values()) {
 			for (CustomItem customItem : items) 
 				itemsAll.add(customItem);		
 		}
@@ -77,15 +80,15 @@ public class SumCustomHandler {
 	 * Calculate total for Map by key groups  
 	 * Return array of type GroupTotal 
 	 * */
-	public static ArrayList<GroupTotal> getGroupTotal(HashMap<String,ArrayList<CustomItem>> map){
+	public static List<GroupTotal> getGroupTotal(Map<String,List<CustomItem>> map){
 		
 		
-		ArrayList<GroupTotal> groupTotals=new ArrayList<>(); //pass as Attribute 
+		List<GroupTotal> groupTotals=new ArrayList<>(); //pass as Attribute 
 		//iterat with key 
-		for (String key : map.keySet()) {
+		for(String key : map.keySet()) {
 		 GroupTotal gp=new GroupTotal();
 		 gp.key=key;
-			ArrayList<CustomItem> keyValues=map.get(key);
+			List<CustomItem> keyValues=map.get(key);
 			Double groupTotal=new Double(0);
 			    for(CustomItem it:keyValues){
 			    	if(it.getStatus().contains("APPROVED"))
@@ -107,42 +110,38 @@ public class SumCustomHandler {
 	 * OutPut: Map Class: TotalTerminalCard
 	 * Return array of type GroupTotal 
 	 * */
-	public static ArrayList<TotalTerminalCard> getTerminalCardTotal(HashMap<String,ArrayList<CustomItem>> map){
-		
-		
-		ArrayList<TotalTerminalCard> TotalTerminalCard=new ArrayList<>(); //pass as Attribute 
-		//iterat with key 
-		for (String key : map.keySet()) {
-			TotalTerminalCard gp=new TotalTerminalCard();
-		 gp.terminalId=key;
-		 
-			ArrayList<CustomItem> keyValues=map.get(key);
+	public static List<TotalTerminalCard> getTerminalCardTotal(Map<String,List<CustomItem>> map){
+		List<TotalTerminalCard> totalTerminalCard =  new ArrayList<>(); //pass as Attribute 
+		Iterator<Entry<String, List<CustomItem>>> iter = map.entrySet().iterator();
+	   while(iter.hasNext()) {
+		     Entry<String, List<CustomItem>> entrySet = iter.next();
+		     String key = entrySet.getKey();
+			 TotalTerminalCard gp = new TotalTerminalCard();
+		     gp.terminalId = key;
+			 List<CustomItem> keyValues = entrySet.getValue();
 			//totals
-			Double groupTotal=new Double(0);
-			Double mvTotal=new Double(0);
-			Double otherTotal=new Double(0);
-
-			    for(CustomItem it:keyValues){
-			    	
+			Double groupTotal = Double.valueOf(0);
+			Double    mvTotal = Double.valueOf(0);
+			Double otherTotal = Double.valueOf(0);
+			  for(CustomItem it:keyValues){	    	
 			    	if(it.getStatus().contains("APPROVED")){
-			    	
-			    groupTotal+=it.getTotalAmount();	
-			    
-			    if(it.getCardType().contains("MASTERCARD")|| it.getCardType().contains("VISA"))
-			    	mvTotal+= it.getTotalAmount();
-			    else 
-			    	otherTotal+=it.getTotalAmount();
-			    }
+			    		groupTotal+=it.getTotalAmount();	
+				    
+				    if(it.getCardType().contains("MASTERCARD")|| it.getCardType().contains("VISA")) {
+				       	mvTotal += it.getTotalAmount();
+				        }else {
+				      	otherTotal+=it.getTotalAmount();
+				      	} 
+				      }
 			   }
-			    //set Item
-			    
-			gp.total= groupTotal; //get total 
-			gp.totalMasterVisa= mvTotal;
-			gp.totalOthers= otherTotal;
-			TotalTerminalCard.add(gp);
+ 
+			gp.total = groupTotal; //get total 
+			gp.totalMasterVisa = mvTotal;
+			gp.totalOthers = otherTotal;
+			totalTerminalCard.add(gp);
 		}
 		
-		return TotalTerminalCard;
+		return totalTerminalCard;
 	}
 	
 
